--- a/styles.css
+++ b/styles.css
@@ -2,8 +2,8 @@
   font-size: 6rem;
   color: #fff;
   text-align: center;
-  -webkit-animation: glow 1s ease-in-out infinite alternate;
-  -moz-animation: glow 1s ease-in-out infinite alternate;
+  -webkit-animation: glow 10s ease-in-out infinite alternate;
+  -moz-animation: glow 50s ease-in-out infinite alternate;
   animation: glow 1s ease-in-out infinite alternate;
 }
 
@@ -18,7 +18,7 @@
 
 body {
   text-align: center;
-  background-image: url("./images/fons-focs-v3.gif");
+  background-image: url("./images/fons-llum.jpg");
   background-size: cover;
 }
 
@@ -79,29 +79,63 @@ footer {
   background-image: url("./images/k.gif")
 }
 
+.s {
+  background-image: url("./images/s.gif")
+}
+
+.show-s-background .f {
+  display: block;
+}
+
+.show-s-background .i {
+  display: block;
+}
+
+.show-s-background .r {
+  display: block;
+}
+
+.show-s-background .e {
+  display: block;
+}
+
+.show-s-background .w {
+  display: block;
+}
+
+.show-s-background .o {
+  display: block;
+}
+
+.show-s-background .k {
+  display: block;
+}
+
+.show-s-background .s {
+  display: block;
+}
+
 .set {
   margin: 5% auto;
 }
 
 .pressed {
-  box-shadow: 0 3px 4px 0 #DBEDF3;
-  opacity: 0.3;
+  opacity: 0.5;
 }
 
 .drum {
+  border: 2px dashed #ff1a1a;
   display: grid;
-  place-items: center;outline: none;
-  font-size: 4rem;
+  place-items: center;
+  font-size: 3.5rem;
   font-family: 'Playfair Display SC', serif;
-  line-height: 2;
-  font-weight: 200;
+  line-height: 8;
   color: #ff1a1a;
-  text-shadow: rgb(235, 255, 232) 5px 0 10px;
+  text-shadow: rgb(0, 0, 0) 5px 5px 10px;
   border-radius: 15px;
   display: inline-block;
   width: 150px;
   height: 150px;
   text-align: center;
   margin: 10px;
-  background-color: white;
 }
